Fixes for new binaries
Getting tests to work with new design